Small refactors.